// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TelemetryMessagesList custom renderers onRenderCustomProperties when custom properties is present 1`] = `
<DocumentFragment>
  <span>
    {"key1":"value1","key2":"value2"}
  </span>
</DocumentFragment>
`;

exports[`TelemetryMessagesList custom renderers onRenderCustomProperties when there is not custom properties 1`] = `
<DocumentFragment>
  <span>
    -
  </span>
</DocumentFragment>
`;

exports[`TelemetryMessagesList custom renderers onRenderTimestamp (from the column onRender) matches snapshot 1`] = `
<DocumentFragment>
  <span>
    formatted-datetime
  </span>
</DocumentFragment>
`;

exports[`TelemetryMessagesList renders and matches snapshot 1`] = `
<DocumentFragment>
  <div
    class="ms-Viewport"
    style="min-width: 1px; min-height: 1px;"
  >
    <div
      class="ms-DetailsList is-horizontalConstrained root-109"
      data-automationid="DetailsList"
      data-is-scrollable="false"
    >
      <div
        aria-colcount="6"
        aria-rowcount="2"
        role="grid"
      >
        <div
          class="ms-DetailsList-headerWrapper"
          role="presentation"
        >
          <div
            class="ms-FocusZone css-127 ms-DetailsHeader root-111"
            data-automationid="DetailsHeader"
            data-focuszone-id="FocusZone2"
            role="row"
          >
            <div
              aria-labelledby="header1-checkTooltip"
              class="ms-DetailsHeader-cell ms-DetailsHeader-cellIsCheck cellIsCheck-114"
              role="columnheader"
            >
              <span
                class="ms-DetailsHeader-checkTooltip"
              >
                <div
                  aria-checked="false"
                  class="ms-DetailsRow-check ms-DetailsHeader-check check-112 ms-DetailsRow-check--isHeader ms-Check-checkHost check-128"
                  data-automationid="DetailsRowCheck"
                  data-is-focusable="true"
                  data-selection-toggle="true"
                  id="header1-check"
                  role="checkbox"
                  tabindex="0"
                >
                  <div
                    class="ms-Check root-129"
                  >
                    <i
                      aria-hidden="true"
                      class="ms-Icon root-105 ms-Check-circle circle-130"
                      data-icon-name="CircleRing"
                    />
                    <i
                      aria-hidden="true"
                      class="ms-Icon root-105 ms-Check-check check-131"
                      data-icon-name="StatusCircleCheckmark"
                    />
                  </div>
                </div>
              </span>
            </div>
            <div
              aria-labelledby="header1-date-name"
              aria-sort="none"
              class="ms-DetailsHeader-cell is-actionable root-132"
              data-automationid="ColumnsHeaderColumn"
              data-is-draggable="false"
              data-is-focusable="true"
              data-item-key="date"
              draggable="false"
              role="columnheader"
              style="width: 120px;"
              tabindex="-1"
            >
              <span
                class="cellTooltip-140"
              >
                <span
                  class="ms-DetailsHeader-cellTitle cellTitle-138"
                  id="header1-date"
                >
                  <span
                    class="ms-DetailsHeader-cellName cellName-139"
                    id="header1-date-name"
                  >
                    date & time
                  </span>
                </span>
              </span>
            </div>
            <div
              aria-hidden="true"
              class="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerStart-119"
              data-is-focusable="false"
              data-sizer-index="0"
              role="button"
              tabindex="-1"
            />
            <div
              aria-labelledby="header1-eventName-name"
              aria-sort="none"
              class="ms-DetailsHeader-cell is-actionable root-132"
              data-automationid="ColumnsHeaderColumn"
              data-is-draggable="false"
              data-is-focusable="true"
              data-item-key="eventName"
              draggable="false"
              role="columnheader"
              style="width: 120px;"
              tabindex="-1"
            >
              <span
                class="cellTooltip-140"
              >
                <span
                  class="ms-DetailsHeader-cellTitle cellTitle-138"
                  id="header1-eventName"
                >
                  <span
                    class="ms-DetailsHeader-cellName cellName-139"
                    id="header1-eventName-name"
                  >
                    event name
                  </span>
                </span>
              </span>
            </div>
            <div
              aria-hidden="true"
              class="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerStart-119"
              data-is-focusable="false"
              data-sizer-index="1"
              role="button"
              tabindex="-1"
            />
            <div
              aria-labelledby="header1-source-name"
              aria-sort="none"
              class="ms-DetailsHeader-cell is-actionable root-132"
              data-automationid="ColumnsHeaderColumn"
              data-is-draggable="false"
              data-is-focusable="true"
              data-item-key="source"
              draggable="false"
              role="columnheader"
              style="width: 120px;"
              tabindex="-1"
            >
              <span
                class="cellTooltip-140"
              >
                <span
                  class="ms-DetailsHeader-cellTitle cellTitle-138"
                  id="header1-source"
                >
                  <span
                    class="ms-DetailsHeader-cellName cellName-139"
                    id="header1-source-name"
                  >
                    source
                  </span>
                </span>
              </span>
            </div>
            <div
              aria-hidden="true"
              class="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerStart-119"
              data-is-focusable="false"
              data-sizer-index="2"
              role="button"
              tabindex="-1"
            />
            <div
              aria-labelledby="header1-triggeredBy-name"
              aria-sort="none"
              class="ms-DetailsHeader-cell is-actionable root-132"
              data-automationid="ColumnsHeaderColumn"
              data-is-draggable="false"
              data-is-focusable="true"
              data-item-key="triggeredBy"
              draggable="false"
              role="columnheader"
              style="width: 120px;"
              tabindex="-1"
            >
              <span
                class="cellTooltip-140"
              >
                <span
                  class="ms-DetailsHeader-cellTitle cellTitle-138"
                  id="header1-triggeredBy"
                >
                  <span
                    class="ms-DetailsHeader-cellName cellName-139"
                    id="header1-triggeredBy-name"
                  >
                    triggeredBy
                  </span>
                </span>
              </span>
            </div>
            <div
              aria-hidden="true"
              class="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerStart-119"
              data-is-focusable="false"
              data-sizer-index="3"
              role="button"
              tabindex="-1"
            />
            <div
              aria-labelledby="header1-customProperties-name"
              aria-sort="none"
              class="ms-DetailsHeader-cell is-actionable root-132"
              data-automationid="ColumnsHeaderColumn"
              data-is-draggable="false"
              data-is-focusable="true"
              data-item-key="customProperties"
              draggable="false"
              role="columnheader"
              style="width: 120px;"
              tabindex="-1"
            >
              <span
                class="cellTooltip-140"
              >
                <span
                  class="ms-DetailsHeader-cellTitle cellTitle-138"
                  id="header1-customProperties"
                >
                  <span
                    class="ms-DetailsHeader-cellName cellName-139"
                    id="header1-customProperties-name"
                  >
                    custom properties
                  </span>
                </span>
              </span>
            </div>
            <div
              aria-hidden="true"
              class="ms-DetailsHeader-cellSizer cellSizer-118 cellSizerEnd-120"
              data-is-focusable="false"
              data-sizer-index="4"
              role="button"
              tabindex="-1"
            />
          </div>
        </div>
        <div
          class="ms-DetailsList-contentWrapper"
          role="presentation"
        >
          <div
            class="ms-SelectionZone"
            role="presentation"
          >
            <div
              class="ms-FocusZone css-127 focusZone-110"
              data-focuszone-id="FocusZone3"
            >
              <div
                class="ms-List"
                role="presentation"
              >
                <div
                  class="ms-List-surface"
                  role="presentation"
                >
                  <div
                    class="ms-List-page"
                    role="presentation"
                  >
                    <div
                      class="ms-List-cell"
                      data-automationid="ListCell"
                      data-list-index="0"
                      role="presentation"
                    >
                      <div
                        aria-rowindex="2"
                        aria-selected="false"
                        class="ms-FocusZone css-127 ms-DetailsRow is-contentUnselectable root-146"
                        data-automationid="DetailsRow"
                        data-focuszone-id="FocusZone6"
                        data-is-focusable="true"
                        data-item-index="0"
                        data-selection-index="0"
                        data-selection-touch-invoke="true"
                        id="row4-0"
                        role="row"
                        style="min-width: 500px;"
                      >
                        <div
                          class="ms-DetailsRow-cell ms-DetailsRow-cellCheck checkCell-151"
                          data-selection-toggle="true"
                          role="gridcell"
                        >
                          <div
                            aria-checked="false"
                            aria-labelledby="row4-0-checkbox"
                            class="ms-DetailsRow-check ms-Check-checkHost check-128"
                            data-automationid="DetailsRowCheck"
                            data-selection-toggle="true"
                            id="row4-0-checkbox"
                            role="checkbox"
                            tabindex="-1"
                          >
                            <div
                              class="ms-Check root-129"
                            >
                              <i
                                aria-hidden="true"
                                class="ms-Icon root-105 ms-Check-circle circle-130"
                                data-icon-name="CircleRing"
                              />
                              <i
                                aria-hidden="true"
                                class="ms-Icon root-105 ms-Check-check check-131"
                                data-icon-name="StatusCircleCheckmark"
                              />
                            </div>
                          </div>
                        </div>
                        <div
                          class="ms-DetailsRow-fields fields-153"
                          data-automationid="DetailsRowFields"
                          role="presentation"
                        >
                          <div
                            class="ms-DetailsRow-cell cell-149 cellUnpadded-147"
                            data-automation-key="date"
                            data-automationid="DetailsRowCell"
                            role="gridcell"
                            style="width: 120px;"
                          >
                            <span />
                          </div>
                          <div
                            class="ms-DetailsRow-cell cell-149 cellUnpadded-147"
                            data-automation-key="eventName"
                            data-automationid="DetailsRowCell"
                            role="gridcell"
                            style="width: 120px;"
                          >
                            test-name
                          </div>
                          <div
                            class="ms-DetailsRow-cell cell-149 cellUnpadded-147"
                            data-automation-key="source"
                            data-automationid="DetailsRowCell"
                            role="gridcell"
                            style="width: 120px;"
                          >
                            test-source
                          </div>
                          <div
                            class="ms-DetailsRow-cell cell-149 cellUnpadded-147"
                            data-automation-key="triggeredBy"
                            data-automationid="DetailsRowCell"
                            role="gridcell"
                            style="width: 120px;"
                          >
                            test-triggered-by
                          </div>
                          <div
                            class="ms-DetailsRow-cell cell-149 cellUnpadded-147"
                            data-automation-key="customProperties"
                            data-automationid="DetailsRowCell"
                            role="gridcell"
                            style="width: 120px;"
                          >
                            <span>
                              {"key1":"value1","key2":"value2"}
                            </span>
                          </div>
                        </div>
                        <span
                          aria-checked="false"
                          class="checkCover-152"
                          data-selection-toggle="true"
                          role="checkbox"
                        />
                      </div>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</DocumentFragment>
`;
